update MLR file

--- a/MLR.ipynb
+++ b/MLR.ipynb
@@ -2375,17 +2375,16 @@
     "\n",
     "precovid_mlr_new = precovid_mlr.sample(n=1000)\n",
     "\n",
-    "# Convert target to numeric codes explicitly\n",
+    "# Convert target to numeric codes explicitly: inspired by chatgpt\n",
     "precovid_mlr_new['y'] = precovid_mlr_new['Crm_Cd'].astype('category').cat.codes\n",
     "\n",
-    "# Define formula\n",
+    "# Define formula: refer to the lecture note of class 8\n",
     "formula = 'y ~ Vict_Age + LAT + LON + Year'\n",
     "\n",
     "# Fit model with regularization\n",
-    "# mnlogit_model = sm.MNLogit.from_formula(formula, data=precovid_mlr).fit()\n",
+    "# inspired by chatgpt to add regularization to it\n",
     "mnlogit_model = sm.MNLogit.from_formula(formula, data=precovid_mlr_new).fit_regularized(alpha=0.1)\n",
     "\n",
-    "# Print summary\n",
     "print(mnlogit_model.summary())"
    ]
   },
